--- a/.env.staging
+++ b/.env.staging
@@ -4,5 +4,6 @@ NODE_ENV = production
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = 'http://www.forelog.org.tw/iwms-web/'
+VUE_APP_BASE_API = 'https://www.logistics.org.tw/tenacity'
+VUE_APP_WEB_publicPath=/
 
