--- a/.env.staging
+++ b/.env.staging
@@ -5,6 +5,6 @@ ENV = 'staging'
 
 # base api
 VUE_APP_BASE_API = 'https://www.logistics.org.tw/tenacity'
-VUE_APP_WEB_publicPath=/
+VUE_APP_WEB_publicPath = /
 VUE_APP_CALLBACK_API = 'http://10.248.82.109:18090'
 VUE_APP_MQTT_ENTRY_POINT = 'ws://210.242.68.168:8083'
