--- a/.env.staging
+++ b/.env.staging
@@ -7,3 +7,4 @@ ENV = 'staging'
 VUE_APP_BASE_API = 'https://www.logistics.org.tw/tenacity'
 VUE_APP_WEB_publicPath=/tenacity-web/
 VUE_APP_MQTT_ENTRY_POINT = 'ws://210.242.68.168:8083'
+VUE_APP_MQTT_TOPIC_TAG = "itri/t12345/wcs2x/t12345"
